[project]
name = "modal-qwen"
version = "0.1.0"
description = "Qwen3-VL Visual QA service on Modal"
requires-python = ">=3.11"
dependencies = [
    "modal",
    "transformers>=4.54.1",
    "numpy<2",
    "fastapi[standard]>=0.115.4",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "starlette>=0.41.2",
    "torch>=2.7.1",
    "hf-xet>=1.1.5",
    "accelerate",
    "pillow",
    "term-image>=0.7.1",
    "huggingface-hub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
