[project]
name = "modal-qwen"
version = "0.1.0"
description = "Qwen3-VL Visual QA service on Modal"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.69.0",
]

# Note: All other dependencies (transformers, torch, fastapi, etc.) are installed
# in the Modal container image, not locally. See modal_app.py for the image definition.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
